# nonebot_plugin_hotsearch

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_hotsearch/: __init__.py
